[project]
name = "pub-ready-plots"
version = "0.2.0"
description = "Easy publication-ready matplotlib plots for ML papers and posters."
authors = [{ name = "Agustinus Kristiadi", email = "agustinus@kristia.de" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.9.0"]
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = ["pytest>=8.2.2", "pytest-cov>=5.0.0"]
lint = ["ruff>=0.5.0"]

[tool.pytest.ini_options]
testpaths = "tests"
