[project]
name = "pub-ready-plots"
version = "0.2.1"
description = "Easy publication-ready matplotlib plots for ML papers and posters."
authors = [{ name = "Agustinus Kristiadi", email = "agustinus@kristia.de" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.9.0"]
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.uv]
dev-dependencies = ["pytest>=8.2.2", "pytest-cov>=5.0.0", "ruff>=0.5.0"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# Adds isort ("I") and pylint errors and warning ("PLE", "PLW") to defaults.
select = ["E4", "E7", "E9", "F", "I", "PLE", "PLW"]
# Ignore pylint's overwritten loop variable by assignment error
# Skip "Module level import not at top of file"
ignore = ["PLW2901", "E402"]
